kubernetes/frontendsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
