kubernetes/ingresssvc.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /servers
        pathType: Prefix
        backend:
          service:
            name: my-frontend
            port:
              number: 80
